// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SupplierRow — visual structure snapshots > matches DOM snapshot for anonymous_locked 1`] = `
<article
  aria-describedby="supplier-sup-no-001-meta supplier-sup-no-001-about supplier-sup-no-001-certs"
  aria-labelledby="supplier-sup-no-001-title"
  class="group relative overflow-hidden rounded-lg border bg-card text-left shadow-sm transition border-border hover:border-foreground/20"
  data-testid="supplier-row"
>
  <div
    class="flex flex-col gap-0 md:flex-row"
  >
    <div
      class="relative w-full shrink-0 md:w-[180px]"
    >
      <div
        class="relative aspect-[4/3] w-full overflow-hidden bg-muted md:aspect-auto md:h-full md:min-h-[220px]"
      >
        <img
          alt="Atlantic Salmon reference image for Norwegian salmon producer · NO-114"
          class="absolute inset-0 h-full w-full object-cover"
          loading="lazy"
          src="/offers/salmon.webp"
        />
        <div
          class="absolute left-2 top-2 inline-flex items-center gap-1 rounded-full bg-background/90 px-2 py-0.5 text-[11px] font-semibold text-foreground shadow-sm backdrop-blur-sm"
        >
          <span
            aria-hidden="true"
            class="text-sm leading-none"
          >
            🇳🇴
          </span>
          <span>
            Norway
          </span>
        </div>
        <div
          class="absolute bottom-2 left-2 inline-flex items-center gap-1 rounded border border-primary/30 bg-background/90 px-1.5 py-0.5 text-[10px] font-semibold text-primary shadow-sm backdrop-blur-sm"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-badge-check h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.77 4.78 4 4 0 0 1-6.75 0 4 4 0 0 1-4.78-4.77 4 4 0 0 1 0-6.76Z"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
          Reviewed
        </div>
      </div>
    </div>
    <div
      class="flex min-w-0 flex-1 flex-col gap-3 p-4 md:flex-row md:gap-5 md:p-5"
    >
      <div
        aria-describedby="supplier-sup-no-001-meta supplier-sup-no-001-about"
        aria-label="Select Norwegian salmon producer · NO-114 to review details"
        aria-pressed="false"
        class="flex min-w-0 flex-1 cursor-pointer flex-col rounded-md text-left focus:outline-none focus-visible:ring-2 focus-visible:ring-ring"
        role="button"
        tabindex="0"
      >
        <h3
          class="font-heading text-[17px] font-semibold leading-tight tracking-tight text-foreground break-words [overflow-wrap:anywhere] md:text-lg md:[overflow-wrap:break-word]"
          id="supplier-sup-no-001-title"
        >
          <a
            aria-label="Open supplier profile: Norwegian salmon producer · NO-114"
            class="hover:text-primary hover:underline focus:outline-none focus-visible:underline"
            data-testid="supplier-row-title-link"
            href="/suppliers/sup-no-001"
          >
            Norwegian salmon producer · NO-114
          </a>
        </h3>
        <p
          class="mt-1.5 inline-flex items-center gap-1 text-[11px] uppercase tracking-[0.14em] text-muted-foreground md:mt-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-lock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="11"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="11"
            />
            <path
              d="M7 11V7a5 5 0 0 1 10 0v4"
            />
          </svg>
          Supplier identity restricted
        </p>
        <div
          aria-label="Supplier overview"
          class="mt-1.5 flex flex-wrap items-center gap-x-2 gap-y-1 text-xs text-muted-foreground md:mt-2"
          id="supplier-sup-no-001-meta"
        >
          <span
            class="font-medium text-foreground/80"
          >
            Ålesund
            , 
            Norway
          </span>
          <span
            aria-hidden="true"
          >
            ·
          </span>
          <span>
            Producer
          </span>
          <span
            aria-hidden="true"
          >
            ·
          </span>
          <span
            class="inline-flex items-center gap-1"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-calendar-days h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2v4"
              />
              <path
                d="M16 2v4"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M3 10h18"
              />
              <path
                d="M8 14h.01"
              />
              <path
                d="M12 14h.01"
              />
              <path
                d="M16 14h.01"
              />
              <path
                d="M8 18h.01"
              />
              <path
                d="M12 18h.01"
              />
              <path
                d="M16 18h.01"
              />
            </svg>
            In business since 
            2002
          </span>
        </div>
        <p
          aria-label="About supplier"
          class="mt-2.5 line-clamp-2 min-h-[2.6rem] text-sm leading-relaxed text-foreground/85 md:mt-4"
          id="supplier-sup-no-001-about"
          title="Vertically integrated salmon farm and processing plant, weekly air shipments to EU and Asia."
        >
          Vertically integrated salmon farm and processing plant, weekly air shipments to EU and Asia.
        </p>
        <ul
          aria-label="Certifications (4)"
          class="mt-3 flex flex-wrap gap-1.5 md:mt-5"
          id="supplier-sup-no-001-certs"
        >
          <li
            class="inline-flex items-center rounded border border-border bg-muted/40 px-1.5 py-0.5 text-[11px] font-semibold tracking-wide text-foreground/80"
            title="ASC"
          >
            ASC
          </li>
          <li
            class="inline-flex items-center rounded border border-border bg-muted/40 px-1.5 py-0.5 text-[11px] font-semibold tracking-wide text-foreground/80"
            title="MSC"
          >
            MSC
          </li>
          <li
            class="inline-flex items-center rounded border border-border bg-muted/40 px-1.5 py-0.5 text-[11px] font-semibold tracking-wide text-foreground/80"
            title="BRC"
          >
            BRC
          </li>
          <li
            class="inline-flex items-center rounded border border-border bg-muted/40 px-1.5 py-0.5 text-[11px] font-semibold tracking-wide text-foreground/80"
            title="IFS"
          >
            IFS
          </li>
        </ul>
        <div
          aria-label="Supplier signals"
          class="mt-auto flex flex-wrap items-center gap-x-4 gap-y-1.5 pt-3 text-xs md:pt-5"
        >
          <span
            class="inline-flex items-center gap-1 text-foreground/80"
          >
            <span
              class="font-semibold tabular-nums text-foreground"
            >
              14
            </span>
            active offers
          </span>
          <span
            class="inline-flex items-center gap-1 text-foreground/80"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-file-check2 h-3.5 w-3.5 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 22h14a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v4"
              />
              <path
                d="M14 2v4a2 2 0 0 0 2 2h4"
              />
              <path
                d="m3 15 2 2 4-4"
              />
            </svg>
            Documents ready
          </span>
          <span
            class="inline-flex items-center gap-1 text-success"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-activity h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
              />
            </svg>
            Replies within a day
          </span>
        </div>
      </div>
      <div
        class="flex shrink-0 flex-col gap-4 md:w-[260px]"
      >
        <div>
          <div
            aria-hidden="true"
            class="flex items-center gap-1 text-[11px] font-semibold uppercase tracking-wider text-muted-foreground"
          >
            <svg
              class="lucide lucide-package h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
              />
              <path
                d="M12 22V12"
              />
              <path
                d="m3.3 7 7.703 4.734a2 2 0 0 0 1.994 0L20.7 7"
              />
              <path
                d="m7.5 4.27 9 5.15"
              />
            </svg>
            Catalog
          </div>
          <div
            aria-label="Product catalog preview"
            class="mt-2 flex items-center gap-2"
          >
            <img
              alt="Atlantic Salmon (HOG) product preview from Norwegian salmon producer · NO-114"
              class="h-12 w-12 shrink-0 rounded-md border border-border object-cover"
              loading="lazy"
              src="/offers/salmon.webp"
              title="Salmon HOG 4-5 kg"
            />
            <img
              alt="Atlantic Salmon (Fillet) product preview from Norwegian salmon producer · NO-114"
              class="h-12 w-12 shrink-0 rounded-md border border-border object-cover"
              loading="lazy"
              src="/images/salmon-fillet.jpg"
              title="Salmon fillet trim D"
            />
            <img
              alt="Atlantic Salmon (Portions) product preview from Norwegian salmon producer · NO-114"
              class="h-12 w-12 shrink-0 rounded-md border border-border object-cover"
              loading="lazy"
              src="/offers/salmon.webp"
              title="Salmon portions IQF"
            />
          </div>
          <p
            class="mt-2 text-[11px] leading-snug text-muted-foreground"
          >
            Full catalog after supplier approval
            <span
              class="sr-only"
            >
               — More products after access
            </span>
          </p>
        </div>
        <div>
          <div
            aria-hidden="true"
            class="flex items-center gap-1 text-[11px] font-semibold uppercase tracking-wider text-muted-foreground"
          >
            <svg
              class="lucide lucide-earth h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.54 15H17a2 2 0 0 0-2 2v4.54"
              />
              <path
                d="M7 3.34V5a3 3 0 0 0 3 3a2 2 0 0 1 2 2c0 1.1.9 2 2 2a2 2 0 0 0 2-2c0-1.1.9-2 2-2h3.17"
              />
              <path
                d="M11 21.95V18a2 2 0 0 0-2-2a2 2 0 0 1-2-2v-1a2 2 0 0 0-2-2H2.05"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            Delivers to
          </div>
          <div
            aria-label="Delivery markets preview"
            class="mt-2 flex flex-wrap items-center gap-1.5 text-xs"
          >
            <span
              class="inline-flex items-center gap-1 rounded border border-border bg-background px-1.5 py-0.5 text-foreground/85"
              title="Germany"
            >
              <span
                aria-hidden="true"
                class="text-sm leading-none"
              >
                🇩🇪
              </span>
              <span>
                Germany
              </span>
            </span>
            <span
              class="inline-flex items-center gap-1 rounded border border-border bg-background px-1.5 py-0.5 text-foreground/85"
              title="France"
            >
              <span
                aria-hidden="true"
                class="text-sm leading-none"
              >
                🇫🇷
              </span>
              <span>
                France
              </span>
            </span>
            <span
              class="inline-flex items-center gap-1 rounded border border-border bg-background px-1.5 py-0.5 text-foreground/85"
              title="Poland"
            >
              <span
                aria-hidden="true"
                class="text-sm leading-none"
              >
                🇵🇱
              </span>
              <span>
                Poland
              </span>
            </span>
          </div>
          <p
            class="mt-2 text-[11px] leading-snug text-muted-foreground"
          >
            More delivery markets after supplier approval
            <span
              class="sr-only"
            >
               — More markets after access
            </span>
          </p>
        </div>
        <div
          class="mt-1 flex flex-row items-center gap-2 md:flex-col md:items-stretch"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3 gap-2"
            type="button"
          >
            Create buyer account
            <svg
              class="lucide lucide-chevron-right h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </button>
          <a
            aria-label="Open profile: Norwegian salmon producer · NO-114"
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 gap-2"
            data-testid="supplier-row-open-profile"
            href="/suppliers/sup-no-001"
          >
            Open profile
          </a>
          <button
            aria-pressed="false"
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 gap-2"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-star h-4 w-4 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
            Shortlist
          </button>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`SupplierRow — visual structure snapshots > matches DOM snapshot for qualified_unlocked 1`] = `
<article
  aria-describedby="supplier-sup-no-001-meta supplier-sup-no-001-about supplier-sup-no-001-certs"
  aria-labelledby="supplier-sup-no-001-title"
  class="group relative overflow-hidden rounded-lg border bg-card text-left shadow-sm transition border-border hover:border-foreground/20"
  data-testid="supplier-row"
>
  <div
    class="flex flex-col gap-0 md:flex-row"
  >
    <div
      class="relative w-full shrink-0 md:w-[180px]"
    >
      <div
        class="relative aspect-[4/3] w-full overflow-hidden bg-muted md:aspect-auto md:h-full md:min-h-[220px]"
      >
        <img
          alt="Atlantic Salmon reference image for Nordfjord Sjømat AS"
          class="absolute inset-0 h-full w-full object-cover"
          loading="lazy"
          src="/offers/salmon.webp"
        />
        <div
          class="absolute left-2 top-2 inline-flex items-center gap-1 rounded-full bg-background/90 px-2 py-0.5 text-[11px] font-semibold text-foreground shadow-sm backdrop-blur-sm"
        >
          <span
            aria-hidden="true"
            class="text-sm leading-none"
          >
            🇳🇴
          </span>
          <span>
            Norway
          </span>
        </div>
        <div
          class="absolute bottom-2 left-2 inline-flex items-center gap-1 rounded border border-primary/30 bg-background/90 px-1.5 py-0.5 text-[10px] font-semibold text-primary shadow-sm backdrop-blur-sm"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-badge-check h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.77 4.78 4 4 0 0 1-6.75 0 4 4 0 0 1-4.78-4.77 4 4 0 0 1 0-6.76Z"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
          Reviewed
        </div>
      </div>
    </div>
    <div
      class="flex min-w-0 flex-1 flex-col gap-3 p-4 md:flex-row md:gap-5 md:p-5"
    >
      <div
        aria-describedby="supplier-sup-no-001-meta supplier-sup-no-001-about"
        aria-label="Select Nordfjord Sjømat AS to review details"
        aria-pressed="false"
        class="flex min-w-0 flex-1 cursor-pointer flex-col rounded-md text-left focus:outline-none focus-visible:ring-2 focus-visible:ring-ring"
        role="button"
        tabindex="0"
      >
        <h3
          class="font-heading text-[17px] font-semibold leading-tight tracking-tight text-foreground break-words [overflow-wrap:anywhere] md:text-lg md:[overflow-wrap:break-word]"
          id="supplier-sup-no-001-title"
        >
          <a
            aria-label="Open supplier profile: Nordfjord Sjømat AS"
            class="hover:text-primary hover:underline focus:outline-none focus-visible:underline"
            data-testid="supplier-row-title-link"
            href="/suppliers/sup-no-001"
          >
            Nordfjord Sjømat AS
          </a>
        </h3>
        <div
          aria-label="Supplier overview"
          class="mt-1.5 flex flex-wrap items-center gap-x-2 gap-y-1 text-xs text-muted-foreground md:mt-2"
          id="supplier-sup-no-001-meta"
        >
          <span
            class="font-medium text-foreground/80"
          >
            Ålesund
            , 
            Norway
          </span>
          <span
            aria-hidden="true"
          >
            ·
          </span>
          <span>
            Producer
          </span>
          <span
            aria-hidden="true"
          >
            ·
          </span>
          <span
            class="inline-flex items-center gap-1"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-calendar-days h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2v4"
              />
              <path
                d="M16 2v4"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M3 10h18"
              />
              <path
                d="M8 14h.01"
              />
              <path
                d="M12 14h.01"
              />
              <path
                d="M16 14h.01"
              />
              <path
                d="M8 18h.01"
              />
              <path
                d="M12 18h.01"
              />
              <path
                d="M16 18h.01"
              />
            </svg>
            In business since 
            2002
          </span>
        </div>
        <p
          aria-label="About supplier"
          class="mt-2.5 line-clamp-2 min-h-[2.6rem] text-sm leading-relaxed text-foreground/85 md:mt-4"
          id="supplier-sup-no-001-about"
          title="Vertically integrated salmon farm and processing plant, weekly air shipments to EU and Asia."
        >
          Vertically integrated salmon farm and processing plant, weekly air shipments to EU and Asia.
        </p>
        <ul
          aria-label="Certifications (4)"
          class="mt-3 flex flex-wrap gap-1.5 md:mt-5"
          id="supplier-sup-no-001-certs"
        >
          <li
            class="inline-flex items-center rounded border border-border bg-muted/40 px-1.5 py-0.5 text-[11px] font-semibold tracking-wide text-foreground/80"
            title="ASC"
          >
            ASC
          </li>
          <li
            class="inline-flex items-center rounded border border-border bg-muted/40 px-1.5 py-0.5 text-[11px] font-semibold tracking-wide text-foreground/80"
            title="MSC"
          >
            MSC
          </li>
          <li
            class="inline-flex items-center rounded border border-border bg-muted/40 px-1.5 py-0.5 text-[11px] font-semibold tracking-wide text-foreground/80"
            title="BRC"
          >
            BRC
          </li>
          <li
            class="inline-flex items-center rounded border border-border bg-muted/40 px-1.5 py-0.5 text-[11px] font-semibold tracking-wide text-foreground/80"
            title="IFS"
          >
            IFS
          </li>
        </ul>
        <div
          aria-label="Supplier signals"
          class="mt-auto flex flex-wrap items-center gap-x-4 gap-y-1.5 pt-3 text-xs md:pt-5"
        >
          <span
            class="inline-flex items-center gap-1 text-foreground/80"
          >
            <span
              class="font-semibold tabular-nums text-foreground"
            >
              14
            </span>
            active offers
          </span>
          <span
            class="inline-flex items-center gap-1 text-foreground/80"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-file-check2 h-3.5 w-3.5 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 22h14a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v4"
              />
              <path
                d="M14 2v4a2 2 0 0 0 2 2h4"
              />
              <path
                d="m3 15 2 2 4-4"
              />
            </svg>
            Documents ready
          </span>
          <span
            class="inline-flex items-center gap-1 text-success"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-activity h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
              />
            </svg>
            Replies within a day
          </span>
        </div>
      </div>
      <div
        class="flex shrink-0 flex-col gap-4 md:w-[260px]"
      >
        <div>
          <div
            aria-hidden="true"
            class="flex items-center gap-1 text-[11px] font-semibold uppercase tracking-wider text-muted-foreground"
          >
            <svg
              class="lucide lucide-package h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
              />
              <path
                d="M12 22V12"
              />
              <path
                d="m3.3 7 7.703 4.734a2 2 0 0 0 1.994 0L20.7 7"
              />
              <path
                d="m7.5 4.27 9 5.15"
              />
            </svg>
            Catalog
          </div>
          <div
            aria-label="Product catalog preview"
            class="mt-2 flex items-center gap-2"
          >
            <img
              alt="Atlantic Salmon (HOG) product preview from Nordfjord Sjømat AS"
              class="h-12 w-12 shrink-0 rounded-md border border-border object-cover"
              loading="lazy"
              src="/offers/salmon.webp"
              title="Salmon HOG 4-5 kg"
            />
            <img
              alt="Atlantic Salmon (Fillet) product preview from Nordfjord Sjømat AS"
              class="h-12 w-12 shrink-0 rounded-md border border-border object-cover"
              loading="lazy"
              src="/images/salmon-fillet.jpg"
              title="Salmon fillet trim D"
            />
            <img
              alt="Atlantic Salmon (Portions) product preview from Nordfjord Sjømat AS"
              class="h-12 w-12 shrink-0 rounded-md border border-border object-cover"
              loading="lazy"
              src="/offers/salmon.webp"
              title="Salmon portions IQF"
            />
            <span
              class="inline-flex h-12 min-w-12 shrink-0 items-center justify-center rounded-md border border-dashed border-border bg-muted/40 px-1.5 text-[11px] font-semibold text-foreground/80"
            >
              +
              29
               products
            </span>
          </div>
        </div>
        <div>
          <div
            aria-hidden="true"
            class="flex items-center gap-1 text-[11px] font-semibold uppercase tracking-wider text-muted-foreground"
          >
            <svg
              class="lucide lucide-earth h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.54 15H17a2 2 0 0 0-2 2v4.54"
              />
              <path
                d="M7 3.34V5a3 3 0 0 0 3 3a2 2 0 0 1 2 2c0 1.1.9 2 2 2a2 2 0 0 0 2-2c0-1.1.9-2 2-2h3.17"
              />
              <path
                d="M11 21.95V18a2 2 0 0 0-2-2a2 2 0 0 1-2-2v-1a2 2 0 0 0-2-2H2.05"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            Delivers to
          </div>
          <div
            aria-label="Delivery markets preview"
            class="mt-2 flex flex-wrap items-center gap-1.5 text-xs"
          >
            <span
              class="inline-flex items-center gap-1 rounded border border-border bg-background px-1.5 py-0.5 text-foreground/85"
              title="Germany"
            >
              <span
                aria-hidden="true"
                class="text-sm leading-none"
              >
                🇩🇪
              </span>
              <span>
                Germany
              </span>
            </span>
            <span
              class="inline-flex items-center gap-1 rounded border border-border bg-background px-1.5 py-0.5 text-foreground/85"
              title="France"
            >
              <span
                aria-hidden="true"
                class="text-sm leading-none"
              >
                🇫🇷
              </span>
              <span>
                France
              </span>
            </span>
            <span
              class="inline-flex items-center gap-1 rounded border border-border bg-background px-1.5 py-0.5 text-foreground/85"
              title="Poland"
            >
              <span
                aria-hidden="true"
                class="text-sm leading-none"
              >
                🇵🇱
              </span>
              <span>
                Poland
              </span>
            </span>
            <span
              class="text-[11px] font-medium text-muted-foreground"
            >
              +
              15
               markets
            </span>
          </div>
        </div>
        <div
          class="mt-1 flex flex-row items-center gap-2 md:flex-col md:items-stretch"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3 gap-2"
            type="button"
          >
            Open supplier profile
            <svg
              class="lucide lucide-chevron-right h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </button>
          <a
            aria-label="Open profile: Nordfjord Sjømat AS"
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 gap-2"
            data-testid="supplier-row-open-profile"
            href="/suppliers/sup-no-001"
          >
            Open profile
          </a>
          <button
            aria-pressed="false"
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 gap-2"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-star h-4 w-4 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
            Shortlist
          </button>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`SupplierRow — visual structure snapshots > matches DOM snapshot for registered_locked 1`] = `
<article
  aria-describedby="supplier-sup-no-001-meta supplier-sup-no-001-about supplier-sup-no-001-certs"
  aria-labelledby="supplier-sup-no-001-title"
  class="group relative overflow-hidden rounded-lg border bg-card text-left shadow-sm transition border-border hover:border-foreground/20"
  data-testid="supplier-row"
>
  <div
    class="flex flex-col gap-0 md:flex-row"
  >
    <div
      class="relative w-full shrink-0 md:w-[180px]"
    >
      <div
        class="relative aspect-[4/3] w-full overflow-hidden bg-muted md:aspect-auto md:h-full md:min-h-[220px]"
      >
        <img
          alt="Atlantic Salmon reference image for Norwegian salmon producer · NO-114"
          class="absolute inset-0 h-full w-full object-cover"
          loading="lazy"
          src="/offers/salmon.webp"
        />
        <div
          class="absolute left-2 top-2 inline-flex items-center gap-1 rounded-full bg-background/90 px-2 py-0.5 text-[11px] font-semibold text-foreground shadow-sm backdrop-blur-sm"
        >
          <span
            aria-hidden="true"
            class="text-sm leading-none"
          >
            🇳🇴
          </span>
          <span>
            Norway
          </span>
        </div>
        <div
          class="absolute bottom-2 left-2 inline-flex items-center gap-1 rounded border border-primary/30 bg-background/90 px-1.5 py-0.5 text-[10px] font-semibold text-primary shadow-sm backdrop-blur-sm"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-badge-check h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.77 4.78 4 4 0 0 1-6.75 0 4 4 0 0 1-4.78-4.77 4 4 0 0 1 0-6.76Z"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
          Reviewed
        </div>
      </div>
    </div>
    <div
      class="flex min-w-0 flex-1 flex-col gap-3 p-4 md:flex-row md:gap-5 md:p-5"
    >
      <div
        aria-describedby="supplier-sup-no-001-meta supplier-sup-no-001-about"
        aria-label="Select Norwegian salmon producer · NO-114 to review details"
        aria-pressed="false"
        class="flex min-w-0 flex-1 cursor-pointer flex-col rounded-md text-left focus:outline-none focus-visible:ring-2 focus-visible:ring-ring"
        role="button"
        tabindex="0"
      >
        <h3
          class="font-heading text-[17px] font-semibold leading-tight tracking-tight text-foreground break-words [overflow-wrap:anywhere] md:text-lg md:[overflow-wrap:break-word]"
          id="supplier-sup-no-001-title"
        >
          <a
            aria-label="Open supplier profile: Norwegian salmon producer · NO-114"
            class="hover:text-primary hover:underline focus:outline-none focus-visible:underline"
            data-testid="supplier-row-title-link"
            href="/suppliers/sup-no-001"
          >
            Norwegian salmon producer · NO-114
          </a>
        </h3>
        <p
          class="mt-1.5 inline-flex items-center gap-1 text-[11px] uppercase tracking-[0.14em] text-muted-foreground md:mt-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-lock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="11"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="11"
            />
            <path
              d="M7 11V7a5 5 0 0 1 10 0v4"
            />
          </svg>
          Supplier identity restricted
        </p>
        <div
          aria-label="Supplier overview"
          class="mt-1.5 flex flex-wrap items-center gap-x-2 gap-y-1 text-xs text-muted-foreground md:mt-2"
          id="supplier-sup-no-001-meta"
        >
          <span
            class="font-medium text-foreground/80"
          >
            Ålesund
            , 
            Norway
          </span>
          <span
            aria-hidden="true"
          >
            ·
          </span>
          <span>
            Producer
          </span>
          <span
            aria-hidden="true"
          >
            ·
          </span>
          <span
            class="inline-flex items-center gap-1"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-calendar-days h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2v4"
              />
              <path
                d="M16 2v4"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M3 10h18"
              />
              <path
                d="M8 14h.01"
              />
              <path
                d="M12 14h.01"
              />
              <path
                d="M16 14h.01"
              />
              <path
                d="M8 18h.01"
              />
              <path
                d="M12 18h.01"
              />
              <path
                d="M16 18h.01"
              />
            </svg>
            In business since 
            2002
          </span>
        </div>
        <p
          aria-label="About supplier"
          class="mt-2.5 line-clamp-2 min-h-[2.6rem] text-sm leading-relaxed text-foreground/85 md:mt-4"
          id="supplier-sup-no-001-about"
          title="Vertically integrated salmon farm and processing plant, weekly air shipments to EU and Asia."
        >
          Vertically integrated salmon farm and processing plant, weekly air shipments to EU and Asia.
        </p>
        <ul
          aria-label="Certifications (4)"
          class="mt-3 flex flex-wrap gap-1.5 md:mt-5"
          id="supplier-sup-no-001-certs"
        >
          <li
            class="inline-flex items-center rounded border border-border bg-muted/40 px-1.5 py-0.5 text-[11px] font-semibold tracking-wide text-foreground/80"
            title="ASC"
          >
            ASC
          </li>
          <li
            class="inline-flex items-center rounded border border-border bg-muted/40 px-1.5 py-0.5 text-[11px] font-semibold tracking-wide text-foreground/80"
            title="MSC"
          >
            MSC
          </li>
          <li
            class="inline-flex items-center rounded border border-border bg-muted/40 px-1.5 py-0.5 text-[11px] font-semibold tracking-wide text-foreground/80"
            title="BRC"
          >
            BRC
          </li>
          <li
            class="inline-flex items-center rounded border border-border bg-muted/40 px-1.5 py-0.5 text-[11px] font-semibold tracking-wide text-foreground/80"
            title="IFS"
          >
            IFS
          </li>
        </ul>
        <div
          aria-label="Supplier signals"
          class="mt-auto flex flex-wrap items-center gap-x-4 gap-y-1.5 pt-3 text-xs md:pt-5"
        >
          <span
            class="inline-flex items-center gap-1 text-foreground/80"
          >
            <span
              class="font-semibold tabular-nums text-foreground"
            >
              14
            </span>
            active offers
          </span>
          <span
            class="inline-flex items-center gap-1 text-foreground/80"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-file-check2 h-3.5 w-3.5 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 22h14a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v4"
              />
              <path
                d="M14 2v4a2 2 0 0 0 2 2h4"
              />
              <path
                d="m3 15 2 2 4-4"
              />
            </svg>
            Documents ready
          </span>
          <span
            class="inline-flex items-center gap-1 text-success"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-activity h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
              />
            </svg>
            Replies within a day
          </span>
        </div>
      </div>
      <div
        class="flex shrink-0 flex-col gap-4 md:w-[260px]"
      >
        <div>
          <div
            aria-hidden="true"
            class="flex items-center gap-1 text-[11px] font-semibold uppercase tracking-wider text-muted-foreground"
          >
            <svg
              class="lucide lucide-package h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
              />
              <path
                d="M12 22V12"
              />
              <path
                d="m3.3 7 7.703 4.734a2 2 0 0 0 1.994 0L20.7 7"
              />
              <path
                d="m7.5 4.27 9 5.15"
              />
            </svg>
            Catalog
          </div>
          <div
            aria-label="Product catalog preview"
            class="mt-2 flex items-center gap-2"
          >
            <img
              alt="Atlantic Salmon (HOG) product preview from Norwegian salmon producer · NO-114"
              class="h-12 w-12 shrink-0 rounded-md border border-border object-cover"
              loading="lazy"
              src="/offers/salmon.webp"
              title="Salmon HOG 4-5 kg"
            />
            <img
              alt="Atlantic Salmon (Fillet) product preview from Norwegian salmon producer · NO-114"
              class="h-12 w-12 shrink-0 rounded-md border border-border object-cover"
              loading="lazy"
              src="/images/salmon-fillet.jpg"
              title="Salmon fillet trim D"
            />
            <img
              alt="Atlantic Salmon (Portions) product preview from Norwegian salmon producer · NO-114"
              class="h-12 w-12 shrink-0 rounded-md border border-border object-cover"
              loading="lazy"
              src="/offers/salmon.webp"
              title="Salmon portions IQF"
            />
          </div>
          <p
            class="mt-2 text-[11px] leading-snug text-muted-foreground"
          >
            Full catalog after supplier approval
            <span
              class="sr-only"
            >
               — More products after access
            </span>
          </p>
        </div>
        <div>
          <div
            aria-hidden="true"
            class="flex items-center gap-1 text-[11px] font-semibold uppercase tracking-wider text-muted-foreground"
          >
            <svg
              class="lucide lucide-earth h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.54 15H17a2 2 0 0 0-2 2v4.54"
              />
              <path
                d="M7 3.34V5a3 3 0 0 0 3 3a2 2 0 0 1 2 2c0 1.1.9 2 2 2a2 2 0 0 0 2-2c0-1.1.9-2 2-2h3.17"
              />
              <path
                d="M11 21.95V18a2 2 0 0 0-2-2a2 2 0 0 1-2-2v-1a2 2 0 0 0-2-2H2.05"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            Delivers to
          </div>
          <div
            aria-label="Delivery markets preview"
            class="mt-2 flex flex-wrap items-center gap-1.5 text-xs"
          >
            <span
              class="inline-flex items-center gap-1 rounded border border-border bg-background px-1.5 py-0.5 text-foreground/85"
              title="Germany"
            >
              <span
                aria-hidden="true"
                class="text-sm leading-none"
              >
                🇩🇪
              </span>
              <span>
                Germany
              </span>
            </span>
            <span
              class="inline-flex items-center gap-1 rounded border border-border bg-background px-1.5 py-0.5 text-foreground/85"
              title="France"
            >
              <span
                aria-hidden="true"
                class="text-sm leading-none"
              >
                🇫🇷
              </span>
              <span>
                France
              </span>
            </span>
            <span
              class="inline-flex items-center gap-1 rounded border border-border bg-background px-1.5 py-0.5 text-foreground/85"
              title="Poland"
            >
              <span
                aria-hidden="true"
                class="text-sm leading-none"
              >
                🇵🇱
              </span>
              <span>
                Poland
              </span>
            </span>
          </div>
          <p
            class="mt-2 text-[11px] leading-snug text-muted-foreground"
          >
            More delivery markets after supplier approval
            <span
              class="sr-only"
            >
               — More markets after access
            </span>
          </p>
        </div>
        <div
          class="mt-1 flex flex-row items-center gap-2 md:flex-col md:items-stretch"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3 gap-2"
            type="button"
          >
            Request supplier access
            <svg
              class="lucide lucide-chevron-right h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </button>
          <a
            aria-label="Open profile: Norwegian salmon producer · NO-114"
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 gap-2"
            data-testid="supplier-row-open-profile"
            href="/suppliers/sup-no-001"
          >
            Open profile
          </a>
          <button
            aria-pressed="false"
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 gap-2"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-star h-4 w-4 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
            Shortlist
          </button>
        </div>
      </div>
    </div>
  </div>
</article>
`;
